; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_mime.c_search_header.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_mime.c_search_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { %struct.curl_slist* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.curl_slist*, i8*)* @search_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @search_header(%struct.curl_slist* %0, i8* %1) #0 {
  %3 = alloca %struct.curl_slist*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store %struct.curl_slist* %0, %struct.curl_slist** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @strlen(i8* %7)
  store i64 %8, i64* %5, align 8
  store i8* null, i8** %6, align 8
  br label %9

9:                                                ; preds = %22, %2
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %9
  %13 = load %struct.curl_slist*, %struct.curl_slist** %3, align 8
  %14 = icmp ne %struct.curl_slist* %13, null
  br label %15

15:                                               ; preds = %12, %9
  %16 = phi i1 [ false, %9 ], [ %14, %12 ]
  br i1 %16, label %17, label %26

17:                                               ; preds = %15
  %18 = load %struct.curl_slist*, %struct.curl_slist** %3, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = call i8* @match_header(%struct.curl_slist* %18, i8* %19, i64 %20)
  store i8* %21, i8** %6, align 8
  br label %22

22:                                               ; preds = %17
  %23 = load %struct.curl_slist*, %struct.curl_slist** %3, align 8
  %24 = getelementptr inbounds %struct.curl_slist, %struct.curl_slist* %23, i32 0, i32 0
  %25 = load %struct.curl_slist*, %struct.curl_slist** %24, align 8
  store %struct.curl_slist* %25, %struct.curl_slist** %3, align 8
  br label %9

26:                                               ; preds = %15
  %27 = load i8*, i8** %6, align 8
  ret i8* %27
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @match_header(%struct.curl_slist*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
